--- a/TheWebAndHTML/StylingWithCSS/separating_styles.html
+++ b/TheWebAndHTML/StylingWithCSS/separating_styles.html
@@ -14,3 +14,5 @@
   Once you have linked your style sheet and added a CSS rule, you should see the
   styles change in the preview on the right!
 </p>
+
+<a class="close-popup">::before</a>
